--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Regis Adjihou</span>
           <br />
-          I'm a Web Full Stack Developer.
+          I'm a Full Stack Web Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-               Hi! My name is Regis Adjihou. I am a Software Developer student at JCTC (Jefferson Community and Technical College), and I'm very passionate and dedicated to my work and always open to learning new technologies and frameworks. I am an ambitious and exceptionally organized student who is recognized for the ability to communicate effectively, work as part of a team and solve problems creatively. I truly believe that "Success is a journey, not a destination". ⠀
+               Hi! My name is Regis Adjihou. I am a Software Developer student at JCTC (Jefferson Community and Technical College), and I'm very passionate and dedicated to my work and always open to learning new technologies and frameworks. I am an ambitious and exceptionally organized student who is recognized for the ability to communicate effectively, work as part of a team and solve problems creatively.
               </p>
               <p class="about-wrapper__info-text">
                 So far, we have designed and developed programs that use Python for client and server programming (WxPython, Bottle.py, SQL etc...).I am also a self-taught web developer using HTML5, CSS3, Bootstrap, JavaScript, jQuery,React, Nodejs, Expressjs, RESTful API, MongoDB, Mongoose and match more.
@@ -126,7 +126,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="https://www.impactbnd.com/hubfs/blog-image-uploads/9_Blog_Layout_Best_Practices_From_2017.jpg" />
+                    <img class="img-fluid" src="https://www.blogger.com/about/img/social/facebook-1200x630.jpg" />
                   </div>
                 </a>
               </div>
