--- a/src/template.html
+++ b/src/template.html
@@ -17,8 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
+    <title>Regis Adjihou|Web Developer</title>
     <!-- Put here your site title -->
-    <title>Regis Adjihou| Developer</title>
+    
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -81,7 +82,7 @@
                Hi! My name is Regis Adjihou. I am a Software Developer student at JCTC (Jefferson Community and Technical College), and I'm very passionate and dedicated to my work and always open to learning new technologies and frameworks. I am an ambitious and exceptionally organized student who is recognized for the ability to communicate effectively, work as part of a team and solve problems creatively.
               </p>
               <p class="about-wrapper__info-text">
-                So far, we have designed and developed programs that use Python for client and server programming (WxPython, Bottle.py, SQL etc...).I am also a self-taught web developer using HTML5, CSS3, Bootstrap, JavaScript, jQuery,React, Nodejs, Expressjs, RESTful API, MongoDB, Mongoose and match more.
+                I am also a self-taught web developer using HTML5, CSS3, Bootstrap, JavaScript, jQuery,React, Nodejs, Expressjs, RESTful API, MongoDB, Mongoose and match more.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://docs.google.com/document/d/1_g8qFqgfz9Qlk3V5240e4rds2WhYY5blKrMl8ai4nVY/edit?usp=sharing">
@@ -107,7 +108,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">RESTful API Blog</h3>
+                <h3 class="project-wrapper__text-title">RESTful Blog</h3>
                 <div>
                   <p class="mb-4">
                  Description: The purpose of the project was to work with restful api using nodejs as a backend and  mongodb as the database. Just a simple blog where you can post your adventure. Give it a try.
@@ -232,7 +233,7 @@
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:rcchadrac@gmail.com"
             >Contact Me</a
           >
         </div>
