Add more projects

--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,4 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> cobimr@protonmail.com
--->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,12 +8,12 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <title>Regis Adjihou|Web Developer</title>
-    <!-- Put here your site title -->
+    
     
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <!--<meta name="keywords" content="[username], [name], skill" />-->
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+     <!--<meta name="description" content="[Your name here] | Developer" />-->
 
     <!-- Required librarys -->
     <link
@@ -108,6 +98,37 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">YelCamp Project</h3>
+                <div>
+                  <p class="mb-4">
+                 YelpCamp is a campground website. Users can create their own campgrounds or view others' campgrounds. To get started, simply sign up. This was a project for a web dev course taught by Colt Steele.
+                </p>
+                <p class="mb-4">Technologies: YelpCamp was created using Node.js, Express, MongoDB, Google Api , RESTful Api and more.</p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://nameless-tor-36926.herokuapp.com/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/regisadjihou/yelcamp">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://nameless-tor-36926.herokuapp.com/" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="https://user-images.githubusercontent.com/41349472/47598483-35f7e780-d96a-11e8-98e3-53f2c6bdf20b.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">RESTful Blog</h3>
                 <div>
                   <p class="mb-4">
@@ -125,7 +146,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://limitless-retreat-69680.herokuapp.com/blogs" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://www.blogger.com/about/img/social/facebook-1200x630.jpg" />
                   </div>
@@ -156,7 +177,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://codesandbox.io/s/using-pre-built-react-components-completed-b69lf" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://d12y7sg0iam4lc.cloudfront.net/s/img/marketing/top-todo-app/to-do-list.png" />
                   </div>
@@ -187,7 +208,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://regisadjihou.github.io/dumkit/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://miro.medium.com/max/4000/1*R7dDXhhTYAj-SCouGIopIA.jpeg" />
                   </div>
