--- a/src/template.html
+++ b/src/template.html
@@ -69,13 +69,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-               Hi! My name is Regis Adjihou. I am a Software Developer student at JCTC (Jefferson Community and Technical College), and I'm very passionate and dedicated to my work and always open to learning new technologies and frameworks. I am an ambitious and exceptionally organized student who is recognized for the ability to communicate effectively, work as part of a team and solve problems creatively.
-              </p>
-              <p class="about-wrapper__info-text">
-                I am also a self-taught web developer using HTML5, CSS3, Bootstrap, JavaScript, jQuery,React, Nodejs, Expressjs, RESTful API, MongoDB, Mongoose and match more.
+               Hi! My name is Regis Adjihou, I am a Full Stack Web Developer. I'm very passionate and dedicated to my work and always open to learning new technologies and frameworks. I am an ambitious and exceptionally organized person who is recognized for the ability to communicate effectively, work as part of a team and solve problems creatively.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://docs.google.com/document/d/1_g8qFqgfz9Qlk3V5240e4rds2WhYY5blKrMl8ai4nVY/edit?usp=sharing">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://docs.google.com/document/d/165TDbPtC68zLlHFCGu3_x1Ud-unHs7C4ZlAs2n6r2t0/edit#heading=h.pwnp1k6vsbh1">
                   View Resume
                 </a>
               </span>
@@ -280,7 +277,7 @@
 
         <hr />
 
-        <!-- If you give me some credit, will be huge for me :) -->
+        
         <p class="footer__text">
           Copyright © 2020 
         </p>
