uploaded robot app project

--- a/src/template.html
+++ b/src/template.html
@@ -188,26 +188,26 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Drum 🥁 Kit</h3>
+                <h3 class="project-wrapper__text-title">Robot Friends</h3>
                 <div>
                   <p class="mb-4">
-                   Description: The purpose of the project was to work with javascript and dom manipulation to have a better understand of the concept. Just a simple drumkit, you can play by using the letters on your keyboard or by cliking on the images. Give it a try.</p>  
-                  <p class="mb-4"> Technologies: Javascript, DOM Manipulation.</p>
+                    React Web App made with RoboHash and JSONPlaceholder API integration.</p>  
+                  <p class="mb-4"> Technologies: Javascript, React</p>
                   
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://regisadjihou.github.io/dumkit/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://regisadjihou.github.io/robot_app1/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/regisadjihou/dumkit">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/regisadjihou/robot_app1">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://regisadjihou.github.io/dumkit/" target="_blank">
+                <a href="https://regisadjihou.github.io/robot_app1/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="https://miro.medium.com/max/4000/1*R7dDXhhTYAj-SCouGIopIA.jpeg" />
+                    <img class="img-fluid" src="https://camo.githubusercontent.com/4abd19d665f1b15358793b758f2d6a64f6cef59d1d92287d57fb32bab218015f/68747470733a2f2f692e696d6775722e636f6d2f6a6d4b477036632e6a7067" />
                   </div>
                 </a>
               </div>
