--- a/src/template.html
+++ b/src/template.html
@@ -90,6 +90,37 @@
           <h2 class="section-title dark-blue-text">
             Projects
           </h2>
+                    <!-- Each .row is a project -->
+                    <div class="row">
+                      <div class="col-lg-4 col-sm-12">
+                        <div class="project-wrapper__text">
+                          <h3 class="project-wrapper__text-title">Facial Image Recognition App</h3>
+                          <div>
+                            <p class="mb-4">
+                              Want to see the power of what AI can do? Then check out this fun, little facial recognition app.
+                              It lets you upload any photo, and uses the Clarifai API to detect whether any faces are present. If a face does exist, it will draw a coloured box around it. In addition, this app includes authentication (login/logout capabilities).
+                          </p>
+                          <p class="mb-4">Technologies: React.js, Node.js, and PostgreSQL </p>
+                          </div>
+                          <a target="_blank" class="cta-btn cta-btn--hero" href="https://smart-brain-regis.herokuapp.com/">
+                            See Live
+                          </a>
+                          <a target="_blank" class="cta-btn text-color-main" href="https://github.com/regisadjihou/smart-brain">
+                            Source Code
+                          </a>
+                        </div>
+                      </div>
+                      <div class="col-lg-8 col-sm-12">
+                        <div class="project-wrapper__image">
+                          <a href="https://nameless-tor-36926.herokuapp.com/" target="_blank">
+                            <div data-tilt class="thumbnail rounded">
+                              <img class="img-fluid" src="https://davidpnowak.com/static/15325e09b62ca8a3c9c74b63775f709d/af6f2/facial-recognition.png" />
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- /END Project -->
 
           <!-- Each .row is a project -->
           <div class="row">
@@ -98,7 +129,7 @@
                 <h3 class="project-wrapper__text-title">YelCamp Project</h3>
                 <div>
                   <p class="mb-4">
-                 YelpCamp is a campground website. Users can create their own campgrounds or view others' campgrounds. To get started, simply sign up. This was a project for a web dev course taught by Colt Steele.
+                 YelpCamp is a campground website. Users can create their own campgrounds or view others' campgrounds. To get started, simply sign up.
                 </p>
                 <p class="mb-4">Technologies: YelpCamp was created using Node.js, Express, MongoDB, Google Api , RESTful Api and more.</p>
                 </div>
@@ -115,68 +146,6 @@
                 <a href="https://nameless-tor-36926.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="https://user-images.githubusercontent.com/41349472/47598483-35f7e780-d96a-11e8-98e3-53f2c6bdf20b.png" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">RESTful Blog</h3>
-                <div>
-                  <p class="mb-4">
-                 Description: The purpose of the project was to work with restful api using nodejs as a backend and  mongodb as the database. Just a simple blog where you can post your adventure. Give it a try.
-                </p>
-                <p class="mb-4">Technologies: Node.js, Mongodb, Express.js and more</p>
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://limitless-retreat-69680.herokuapp.com/blogs">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/regisadjihou/blog">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://limitless-retreat-69680.herokuapp.com/blogs" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="https://www.blogger.com/about/img/social/facebook-1200x630.jpg" />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">React-Todo-List</h3>
-                <div>
-                  <p class="mb-4">
-                 Description: The purpose of the project was to work with React, State Hook, Component and props to have a better understand of the concept. Just a simple todo list where you can store your daily task list. Give it a try</p>
-                 <p class="mb-4">Technologies: React, State Hook, Component and props</p>
-                  
-                </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://codesandbox.io/s/using-pre-built-react-components-completed-b69lf">
-                  See Live
-                </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/regisadjihou/react-todolist">
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image">
-                <a href="https://codesandbox.io/s/using-pre-built-react-components-completed-b69lf" target="_blank">
-                  <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="https://d12y7sg0iam4lc.cloudfront.net/s/img/marketing/top-todo-app/to-do-list.png" />
                   </div>
                 </a>
               </div>
